tests/snapshots/eval__for_loop__body_error_propagates.snap
---
source: tests/eval.rs
expression: "run(\"for x in [1, 2] { undefined_thing }\")"
---
Err(
    EvalError {
        category: Name,
        message: "unknown identifier `undefined_thing`",
        span: Span {
            start: 18,
            end: 33,
        },
        cause: None,
    },
)
