tests/snapshots/eval__for_loop__break_exits_early.snap
---
source: tests/eval.rs
expression: "run(\"for x in [1, 2, 3] { if x == 2 { break }\\nprint(x) }\")"
---
Ok(
    "1\n",
)
