tests/snapshots/eval__for_loop__break_through_nested_if.snap
---
source: tests/eval.rs
expression: "run(\"for x in [1, 2, 3] { if x == 2 { break } }\\nprint(\\\"done\\\")\")"
---
Ok(
    "done\n",
)
