tests/snapshots/eval__for_loop__continue_skips_one.snap
---
source: tests/eval.rs
expression: "run(\"for x in [1, 2, 3] { if x == 2 { continue }\\nprint(x) }\")"
---
Ok(
    "1\n3\n",
)
