tests/snapshots/eval__for_loop__loop_var_const_in_body.snap
---
source: tests/eval.rs
expression: "run(\"for x in [1] { x = 99 }\")"
---
Err(
    EvalError {
        category: Name,
        message: "cannot reassign const `x`",
        span: Span {
            start: 15,
            end: 21,
        },
        cause: None,
    },
)
