tests/snapshots/eval__for_loop__nested_for_break_inner_only.snap
---
source: tests/eval.rs
expression: "run(\"for x in [1, 2] { for y in [10, 20] { if y == 10 { break }\\nprint(y) }\\nprint(x) }\")"
---
Ok(
    "1\n2\n",
)
