tests/snapshots/eval__for_loop__non_list_iter_int.snap
---
source: tests/eval.rs
expression: "run(\"for x in 1 { }\")"
---
Err(
    EvalError {
        category: Type,
        message: "cannot iterate Int",
        span: Span {
            start: 0,
            end: 14,
        },
        cause: None,
    },
)
