tests/snapshots/eval__for_loop__non_list_iter_object.snap
---
source: tests/eval.rs
expression: "run(\"for x in {a: 1} { }\")"
---
Err(
    EvalError {
        category: Type,
        message: "cannot iterate Object",
        span: Span {
            start: 0,
            end: 19,
        },
        cause: None,
    },
)
