tests/snapshots/eval__for_loop__outer_var_restored_after_loop.snap
---
source: tests/eval.rs
expression: "run(\"var x = 1\\nfor x in [2, 3] { }\\nprint(x)\")"
---
Ok(
    "1\n",
)
