tests/snapshots/eval__for_loop__prints_each_int.snap
---
source: tests/eval.rs
expression: "run(\"for x in [1, 2, 3] { print(x) }\")"
---
Ok(
    "1\n2\n3\n",
)
